--- a/1/markdown_formula.ipynb
+++ b/1/markdown_formula.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "Here is the sample variance \n",
-    "$$\\sigma^{2}= \\sum_{i=1}^n (y_{i}-\\overline y)^{2}\\over n-1$$"
+    "$$\\sigma^{2} ={ \\sum_{i=1}^n (y_{i}-\\overline y)^{2}\\over n-1}$$"
    ]
   },
   {
